# py-ispyb

./: .env  .gitignore  .gitlab-ci.yml  .prettierrc  .pylintrc  .travis.yml  404.html  CONTRIBUTING.md  Dockerfile  README.md  __init__.py  app.py  codecov.yml  config-template.py  config.cfg  config.py  database.py  database_proposals.py  enabled_db_modules.csv  enabled_modules.csv  index.html  ispyb_core_config.py  ispyb_core_config.yml  ispyb_core_config_example.cfg  ispyb_core_config_example.yml  ispyb_ssx_config.py  ispyb_ssx_config_example.cfg  ispyb_ssx_config_example.yml  local_config.py  mkdocs.yml  py_file_header.txt  requirements-dev.txt  requirements.testing.txt  requirements.txt  run_tests.sh  search.html  setup.cfg  setup.py  sitemap.xml  tox.ini  (+2 more)
api/: index.html
app/: __init__.py  models.py  requirements.txt
auth/: index.html
authorization/: index.html
clients/: client.py
conf/: index.html
config/: .env  ci.env  dev.env  docker.env  test.env
deploy/: README.md  docker-compose.yml  run_app.py  run_gevent.py  run_gunicorn.sh
developers/: index.html
docs/: auth.md  authorization.md  conf.md  developers.md  index.md  mkdocs.yml  model.md  permissions.md  routes.md  run.md  simulator.md  swagger.json  technical_description.md  tests.md  upsync.md
examples/: auth.yml  core_db_mapping.csv  em_db_mapping.csv  ispyb_core_config_example.yml  ispyb_em_config_example.yml  ispyb_ssx_config_example.yml  ispyb_ssx_db.sql  pydb_empty.sql  roles_db.sql  simulation.yml  ssx_db_mapping.csv
flask_restx_patched/: __init__.py  api.py  namespace.py  resource.py
grants/: ispyb_acquisition.sql  ispyb_import.sql  ispyb_processing.sql  ispyb_web.sql
ispyb/: __init__.py  database.py  database_proposals.py  models.py  schemas.py
ispyb_core/: __init__.py  models.py  models.py-e
(+869 files in other folders)
