[metadata]
name = pyispyb
author = ISPyB collaboration
author_email = ispyb-dev@esrf.fr
description = ISPyB FastAPI server
license_file = LICENSE
keywords = synchrotron, data acquisition, real-time monitoring, LIMS
long_description = file: README.md
long_description_content_type = text/x-markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
project-urls =
    download = https://github.com/ispyb/py-ispyb
    documentation = https://ispyb.gitlab-pages.esrf.fr/py-ispyb/


[options]
python_requires = >=3.10
zip_safe = true
include_package_data = true
packages = find:
package_dir =
    pyispyb = pyispyb
install_requires =
    ispyb-models == 1.0.0
    fastapi<0.95
    pydantic[dotenv]
    uvicorn
    SQLAlchemy
    pyjwt
    ; mysqlclient
    ; pdfkit
    ; python-barcode
    ; qrcode
    ; python-keycloak == 0.26.1
    ; keycloak == 3.1.3
    ; keycloak-client
    ; python_ldap == 3.4.0
    sqlparse
    mysql-connector-python == 8.0.29

[options.packages.find]
exclude =
  tests

[options.entry_points]
console_scripts = 
    ispyb.simulate = pyispyb.simulation.cli:run
    ispyb.rest = pyispyb.cli.rest:run

[bdist_wheel]
universal = true

[aliases]
test = pytest

[flake8]
ignore = E501,W503,E203,W504,E251,E262,E265,E266,W291,W293
# E501,W503,E203,W504,E251 -> let black handle for formatting
# E262,E265,E266 -> be less optionated about the way to write comments
# W291,W293 -> trailing whitespace in docstrings
exclude =
    venv
